--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
 
-  </body>
+<body>
+  <header class="page-header">
+    <nav class="page-header-navigation">
+      <img class="logo" src="#" alt="Логотип Седона">
+      <ul class="navigation-list">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Главная</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">О Седоне</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Гостиницы</a>
+        </li>
+      </ul>
+      <div class="user-navigation">
+        <a class="user-navigation-link" href="#">
+          <span class="visually-hidden">Поиск</span>
+        </a>
+        <a class="user-navigation-link" href="#">
+          <span class="visually-hidden">Количество предпочтений</span>
+          <span class="user-navigation-counter">12</span>
+        </a>
+        <a href="#" class="user-navigation-button">Хочу сюда!</a>
+      </div>
+    </nav>
+  </header>
+  <main>
+
+  </main>
+
+
+  <!--<p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+     !-->
+</body>
+
 </html>
