--- a/index.html
+++ b/index.html
@@ -34,6 +34,41 @@
     </nav>
   </header>
   <main>
+    <div class="main-promo">
+      <h1 class="visually-hidden">Седона лучше Гранд-Каньона</h1>
+      <img class="promo-image" src="#" alt="Фото надписи на фоне каньона: «Добро пожаловать в лучшее».">
+    </div>
+
+    <section class="features">
+      <h2 class="visually-hidden"> Индивидуальные особеннсти городка</h2>
+      <p class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+      <p class="section-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+
+      <ul class="features-list">
+        <li class="features-item features-large">
+          <h3 class="features-title">Настоящий городок</h3>
+          <p class="features-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <img class="features-img" src="#" alt="Фото заведений городка">
+        </li>
+        <li class="features-item">
+          <h3 class="features-title">Небольшая площадь</h3>
+            <p class="features-text">Все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="features-item">
+          <h3 class="features-title">Красивая дорога</h3>
+            <p class="features-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="features-item">
+          <h3 class="features-title">Мало туристов</h3>
+            <p class="features-text">Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+        <li class="features-item features-large">
+          <h3 class="features-title">Там есть мост дьявола</h3>
+          <p class="features-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <img class="features-img" src="#" alt="Фото Моста дьявола">
+        </li>
+      </ul>
+    </section>
 
   </main>
 
