--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
 </head>
-
 <body>
   <header class="page-header">
     <nav class="page-header-navigation">
@@ -38,12 +36,10 @@
       <h1 class="visually-hidden">Седона лучше Гранд-Каньона</h1>
       <img class="promo-image" src="#" alt="Фото надписи на фоне каньона: «Добро пожаловать в лучшее».">
     </div>
-
     <section class="features">
       <h2 class="visually-hidden"> Индивидуальные особеннсти городка</h2>
       <p class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       <p class="section-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-
       <ul class="features-list">
         <li class="features-item features-large">
           <h3 class="features-title">Настоящий городок</h3>
@@ -52,15 +48,15 @@
         </li>
         <li class="features-item">
           <h3 class="features-title">Небольшая площадь</h3>
-            <p class="features-text">Все достопримечательности находятся очень близко</p>
+          <p class="features-text">Все достопримечательности находятся очень близко</p>
         </li>
         <li class="features-item">
           <h3 class="features-title">Красивая дорога</h3>
-            <p class="features-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <p class="features-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
         <li class="features-item">
           <h3 class="features-title">Мало туристов</h3>
-            <p class="features-text">Большинство едет в Гранд Каньон и толпится там</p>
+          <p class="features-text">Большинство едет в Гранд Каньон и толпится там</p>
         </li>
         <li class="features-item features-large">
           <h3 class="features-title">Там есть мост дьявола</h3>
@@ -69,8 +65,68 @@
         </li>
       </ul>
     </section>
-
+    <section class="services">
+      <h2 class="services-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+      <p class="services-text">Опытный персонал и качественное обслуживание!</p>
+      <ul class="services-list">
+        <li class="services-item">
+          <h3 class="services-item-title">Жильё</h3>
+          <p class="services-item-text">Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
+        </li>
+        <li class="services-item">
+          <h3 class="services-item-title">Еда</h3>
+          <p class="services-item-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li class="services-item">
+          <h3 class="services-item-title">Сувениры</h3>
+          <p class="services-item-text">Не только китайского,но и настоящего местного производства!</p>
+        </li>
+      </ul>
+    </section>
+    <section class="search">
+      <h2 class="visually-hidden">Поиск гостиницы в городке</h2>
+      <p class="search-title">Заинтересовались?</p>
+      <p class="search-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
+        Седоне</p>
+      <a href="#" class="search-button button">
+        Поиск гостинцы в Седоне
+      </a>
+    </section>
+    <section class="subscribe">
+      <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+      <p class="subscribe-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <form class="subscribe-form" action=" https://echo.htmlacademy.ru/" method="get">
+        <label class="subscribe-field">
+          <span class="visually-hidden">Адрес вашей электронной почты</span>
+          <input class="field-input" type="email" name="email" placeholder="Ваш e-mail">
+        </label>
+        <button class="subscribe-button" type="submit">Подписаться</button>
+      </form>
+    </section>
   </main>
+  <footer class="footer">
+    <ul class="footer-social-list">
+      <li class="footer-social-item">
+        <a class="footer-social-link" href="#">
+          <span class="visually-hidden">Вконтакте</span>
+        </a>
+      </li>
+      <li class="footer-social-item">
+        <a class="footer-social-link" href="#">
+          <span class="visually-hidden">Телеграм</span>
+        </a>
+      </li>
+      <li class="footer-social-item">
+        <a class="footer-social-link" href="#">
+          <span class="visually-hidden">Ютуб</span>
+        </a>
+      </li>
+    </ul>
+    <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+    <a class="footer-developer" href="#">
+      <img src="#" alt="Разработано HTML Academy">
+    </a>
+  </footer>
 
 
   <!--<p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
