--- a/catalog.html
+++ b/catalog.html
@@ -8,9 +8,9 @@
 
   <body>
     <header class="page-header">
-      <nav class="navigation">
-        <a class="logo">
-          <img src="#" alt="Логотип Седона">
+      <nav class="page-header-navigation">
+        <a class="logo-link" href="index.html">
+          <img class="logo" src="#" alt="Логотип Седона">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -19,20 +19,19 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
-          <li class="navigation-item navigation-item-active">
+          <li class="navigation-item">
             <a class="navigation-link" href="#">Гостиницы</a>
           </li>
         </ul>
-
-        <div class="user-menu">
-          <a class="icon-button" href="#">
+        <div class="user-navigation">
+          <a class="user-navigation-link" href="#">
             <span class="visually-hidden">Поиск</span>
           </a>
-          <a class="icon-button" href="#">
-            <span class="visually-hidden">Избранное</span>
-            <span class="icon-button-counter">12</span>
+          <a class="user-navigation-link" href="#">
+            <span class="visually-hidden">Количество предпочтений</span>
+            <span class="user-navigation-counter">12</span>
           </a>
-          <a href="#" class="button">Хочу сюда!</a>
+          <a href="#" class="user-navigation-button">Хочу сюда!</a>
         </div>
       </nav>
     </header>
@@ -157,7 +156,8 @@
         <h3 class="visually-hidden">Список выбранных гостиниц</h3>
         <ul class="catalog-card-list">
           <li class="card-item">
-            <img class="card-img" src="#" alt="">
+            <img class="card-img" src="#"
+              alt="Изображение вида на ночное небо и скального образования в районе Седоны,">
             <h4 class="card-title">
               <a class="card-link" href="#">
                 Amara Resort & Spa
@@ -175,7 +175,7 @@
             <p class="card-rate">Рейтинг: 8.5</p>
           </li>
           <li class="card-item">
-            <img class="card-img" src="#" alt="">
+            <img class="card-img" src="#" alt="Изображение знаменитых красно скальных образований Седоны">
             <h4 class="card-title">
               <a class="card-link" href="#">
                 Villas at Poco Diablo
@@ -193,7 +193,7 @@
             <p class="card-rate">Рейтинг: 9.2</p>
           </li>
           <li class="card-item">
-            <img class="card-img" src="#" alt="">
+            <img class="card-img" src="#" alt="Изображение Красно скального государственного парка в Седоне">
             <h4 class="card-title">
               <a class="card-link" href="#">
                 Desert Quail Inn
@@ -211,7 +211,7 @@
             <p class="card-rate">Рейтинг: 6,9</p>
           </li>
           <li class="card-item">
-            <img class="card-img" src="#" alt="">
+            <img class="card-img" src="#" alt="Изображение красных скал Седоны, ночью.">
             <h4 class="card-title">
               <a class="card-link" href="#">
                 GreenTree Inn
@@ -229,9 +229,63 @@
             <p class="card-rate">Рейтинг: 5.0</p>
           </li>
         </ul>
+        <h3 class="visually-hidden">Список страниц</h3>
+        <ul class="pages-list">
+          <li class="pages-item">
+            <a class="pages-link" href="#">1</a>
+          </li>
+          <li class="pages-item">
+            <a class="pages-list" href="#">2</a>
+          </li>
+          <li class="pages-item">
+            <a class="pages-link" href="#">3</a>
+          </li>
+          <li class="pages-item">
+            <a class="pages-link" href="#">4</a>
+          </li>
+          <li class="pages-item">
+            <a class="pages-link" href="#">...</a>
+          </li>
+          <li class="pages-item">
+            <a class="pages-link" href="#">10</a>
+          </li>
+        </ul>
+      </section>
+      <section class="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscribe-form" action=" https://echo.htmlacademy.ru/" method="get">
+          <label class="subscribe-field">
+            <span class="visually-hidden">Адрес вашей электронной почты</span>
+            <input class="field-input" type="email" name="email" placeholder="Ваш e-mail">
+          </label>
+          <button class="subscribe-button" type="submit">Подписаться</button>
+        </form>
       </section>
     </main>
-
+    <footer class="footer">
+      <ul class="footer-social-list">
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="#">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="#">
+            <span class="visually-hidden">Телеграм</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="#">
+            <span class="visually-hidden">Ютуб</span>
+          </a>
+        </li>
+      </ul>
+      <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="footer-developer" href="#">
+        <img src="#" alt="Разработано HTML Academy">
+      </a>
+    </footer>
   </body>
 
 </html>
