Добавлены контентные изображения в index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <header class="page-header">
     <nav class="page-header-navigation">
-      <img class="logo" src="#" alt="Логотип Седона">
+      <img class="logo" src="./images/logo.svg" alt="Логотип Седона">
       <ul class="navigation-list">
         <li class="navigation-item">
           <a class="navigation-link" href="#">Главная</a>
@@ -34,7 +34,7 @@
   <main>
     <div class="main-promo">
       <h1 class="visually-hidden">Седона лучше Гранд-Каньона</h1>
-      <img class="promo-image" src="#" alt="Фото надписи на фоне каньона: «Добро пожаловать в лучшее».">
+      <img class="promo-image" src="./images/content/welcome.svg" width="458" height="352" alt="Изображение надписи с названием городка Седона на фоне каньона и подписью: «Добро пожаловать в лучшее».">
     </div>
     <section class="features">
       <h2 class="visually-hidden"> Индивидуальные особеннсти городка</h2>
@@ -44,7 +44,7 @@
         <li class="features-item features-large">
           <h3 class="features-title">Настоящий городок</h3>
           <p class="features-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img class="features-img" src="#" alt="Фото заведений городка">
+          <img class="features-img" src="./images/content/sedona-city.jpg" width="800" height="385" alt="Фото административных и увеселительных заведений городка на фоне гор и пышной растительности.">
         </li>
         <li class="features-item">
           <h3 class="features-title">Небольшая площадь</h3>
@@ -61,7 +61,7 @@
         <li class="features-item features-large">
           <h3 class="features-title">Там есть мост дьявола</h3>
           <p class="features-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          <img class="features-img" src="#" alt="Фото Моста дьявола">
+          <img class="features-img" src="./images/content/Devil's Bridge.jpg" width="800" height="385" alt="Фото природной арки из красного песчаника, которая носит название «Мост дьявола».">
         </li>
       </ul>
     </section>
