--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="page-header-navigation">
         <a class="logo-link" href="index.html">
-          <img class="logo" src="#" alt="Логотип Седона">
+          <img class="logo" src="./images/logo.svg" alt="Логотип Седона">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -156,8 +156,7 @@
         <h3 class="visually-hidden">Список выбранных гостиниц</h3>
         <ul class="catalog-card-list">
           <li class="card-item">
-            <img class="card-img" src="#"
-              alt="Изображение вида на ночное небо и скального образования в районе Седоны,">
+            <img class="card-img" src="./images/content/Amara Resort & Spa.jpg" width="300" height="212" alt="Изображение вида на ночное небо и скального образования в районе Седоны.">
             <h4 class="card-title">
               <a class="card-link" href="#">
                 Amara Resort & Spa
@@ -175,7 +174,7 @@
             <p class="card-rate">Рейтинг: 8.5</p>
           </li>
           <li class="card-item">
-            <img class="card-img" src="#" alt="Изображение знаменитых красно скальных образований Седоны">
+            <img class="card-img" src="./images/content/Villas at Poco Diablo.jpg" width="300" height="212" alt="Изображение знаменитых красно скальных образований Седоны">
             <h4 class="card-title">
               <a class="card-link" href="#">
                 Villas at Poco Diablo
@@ -193,7 +192,7 @@
             <p class="card-rate">Рейтинг: 9.2</p>
           </li>
           <li class="card-item">
-            <img class="card-img" src="#" alt="Изображение Красно скального государственного парка в Седоне">
+            <img class="card-img" src="./images/content/Desert Quail Inn.jpg" width="300" height="212" alt="Изображение Красно скального государственного парка в Седоне">
             <h4 class="card-title">
               <a class="card-link" href="#">
                 Desert Quail Inn
@@ -211,7 +210,7 @@
             <p class="card-rate">Рейтинг: 6,9</p>
           </li>
           <li class="card-item">
-            <img class="card-img" src="#" alt="Изображение красных скал Седоны, ночью.">
+            <img class="card-img" src="./images/content/GreenTree Inn .jpg" width="300" height="212" alt="Изображение красных скал Седоны, ночью.">
             <h4 class="card-title">
               <a class="card-link" href="#">
                 GreenTree Inn
