--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
       </header>
       <main class="main-inner">
         <div class="inner-wrapper">
-          <header class="main-inner-header">
+          <header class="main-inner-header center-wrapper">
             <h1 class="main-inner-title">Гостиницы Седоны</h1>
             <ul class="breadcrumbs-list">
               <li class="breadcrumbs-item">
@@ -54,7 +54,7 @@
               </li>
             </ul>
           </header>
-          <section class="filters-hotels">
+          <section class="filters-hotels center-wrapper">
             <h2 class="visually-hidden">Фильтры для выбора гостиниц</h2>
             <form class="filters-form" action=" https://echo.htmlacademy.ru/" method="get">
               <fieldset class="filter-fields">
@@ -123,13 +123,15 @@
                     </button>
                   </div>
                 </div>
+              </fieldset>
+              <div class="filter-buttons">
                 <button class="filter-button-submit button" type="submit">Применить</button>
                 <button class="filter-button-reset button" type="reset">Сбросить</button>
-              </fieldset>
+              </div>
             </form>
           </section>
         </div>
-        <section class="catalog">
+        <section class="catalog center-wrapper">
           <h2 class="visually-hidden">Результаты поиска</h2>
           <div class="catalog-sort">
             <h3 class="visually-hidden">Сортировка и отображение</h3>
