--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <span class="visually-hidden">Количество предпочтений</span>
               <span class="user-navigation-counter">12</span>
             </a>
-            <a href="#" class="navigation-link button user-navigation-button">Хочу сюда!</a>
+            <a href="#" class="navigation-link user-navigation-link button">Хочу сюда!</a>
           </div>
         </nav>
       </header>
