--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-<!--<p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <!--<p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
      !-->
     <div class="content-wrapper">
       <header class="page-header">
@@ -47,12 +47,16 @@
         </div>
         <section class="features">
           <h2 class="visually-hidden"> Индивидуальные особеннсти городка</h2>
-          <p class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-          <p class="section-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <div class="features-titles-wrapper">
+            <p class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+            <p class="section-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          </div>
           <ul class="features-list">
             <li class="features-item features-large">
-              <h3 class="features-title section-subtitle">Настоящий городок</h3>
-              <p class="features-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <div class="features-large-wrapper">
+                <h3 class="features-title section-subtitle">Настоящий городок</h3>
+                <p class="features-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
               <img class="features-img" src="./images/content/sedona-city.jpg" width="800" height="385"
                 alt="Фото административных и увеселительных заведений городка на фоне гор и пышной растительности.">
             </li>
@@ -61,16 +65,18 @@
               <p class="features-text">Все достопримечательности находятся очень близко</p>
             </li>
             <li class="features-item">
-              <h3 class="features-title section-subtitle">Красивая дорога</h3>
+              <h3 class="features-title section-subtitle">Красивая<br>дорога</h3>
               <p class="features-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="features-item">
-              <h3 class="features-title section-subtitle">Мало туристов</h3>
+              <h3 class="features-title section-subtitle">Мало<br>туристов</h3>
               <p class="features-text">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="features-item features-large">
-              <h3 class="features-title section-subtitle">Там есть мост дьявола</h3>
-              <p class="features-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <div class="features-large-wrapper">
+                <h3 class="features-title section-subtitle">Там есть мост дьявола</h3>
+                <p class="features-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </div>
               <img class="features-img" src="./images/content/Devil's Bridge.jpg" width="800" height="385"
                 alt="Фото природной арки из красного песчаника, которая носит название «Мост дьявола».">
             </li>
@@ -97,7 +103,8 @@
         <section class="search">
           <h2 class="visually-hidden">Поиск гостиницы в городке</h2>
           <p class="search-title section-title">Заинтересовались?</p>
-          <p class="search-text section-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
+          <p class="search-text section-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+            предложения гостиниц в
             Седоне</p>
           <a href="#" class="search-button button big-button">
             Поиск гостинцы в Седоне
@@ -105,7 +112,8 @@
         </section>
         <section class="subscribe">
           <h2 class="subscribe-title section-title">Подпишитесь на рассылку</h2>
-          <p class="subscribe-text section-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <p class="subscribe-text section-description">Только полезная информация и никакого спама, честное
+            бойскаутское!</p>
           <form class="subscribe-form" action=" https://echo.htmlacademy.ru/" method="get">
             <label class="subscribe-field">
               <span class="visually-hidden">Адрес вашей электронной почты</span>
@@ -140,4 +148,5 @@
       </footer>
     </div>
   </body>
+
 </html>
