--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
         <nav class="page-header-navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link" href="index.html">Главная</a>
+              <a class="navigation-link" href="#">Главная</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">О Седоне</a>
@@ -33,7 +33,7 @@
               <span class="visually-hidden">Количество предпочтений</span>
               <span class="user-navigation-counter">12</span>
             </a>
-            <a href="#" class="navigation-link button user-navigation-button">Хочу сюда!</a>
+            <a href="#" class="navigation-link user-navigation-link button">Хочу сюда!</a>
           </div>
         </nav>
       </header>
