--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
           </ul>
         </section>
         <section class="services">
-          <h2 class="services-title section-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-          <p class="services-text section-description">Опытный персонал и качественное обслуживание!</p>
+          <div class="services-titles-wrapper">
+            <h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+            <p class="section-description">Опытный персонал и качественное обслуживание!</p>
+          </div>
           <ul class="services-list">
             <li class="services-item">
               <h3 class="services-item-title section-subtitle">Жильё</h3>
