--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
         <nav class="page-header-navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link" href="#">Главная</a>
+              <a class="navigation-link" href="index.html">Главная</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">О Седоне</a>
@@ -230,7 +230,7 @@
               </p>
               <a class="button card-link" href="#">Подробнее</a>
               <a class="button card-link button-second" href="#">В избранное</a>
-              <p class="star star-three">
+              <p class="star star-two">
                 <span class="visually-hidden">2 звезды</span>
               </p>
               <p class="card-rate">Рейтинг: 5.0</p>
