--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             </li>
           </ul>
           <div class="user-navigation">
-            <a class="navigation-link user-navigation-link" href="#">
+            <a class="navigation-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
-            <a class="navigation-link user-navigation-link" href="#">
+            <a class="navigation-link" href="#">
               <span class="visually-hidden">Количество предпочтений</span>
               <span class="user-navigation-counter">12</span>
             </a>
-            <a href="#" class="navigation-link user-navigation-link button">Хочу сюда!</a>
+            <a href="#" class="navigation-link button">Хочу сюда!</a>
           </div>
         </nav>
       </header>
