done the catalog-card-list

--- a/catalog.html
+++ b/catalog.html
@@ -171,9 +171,9 @@
                 <span class="description-title">Гостиница</span>
                 <span class="description-defenition">От 4000 ₽</span>
               </p>
-              <a class="button card-link" href="#">Подробнее</a>
+              <a class="button card-link button-fiast" href="#">Подробнее</a>
               <a class="button card-link button-second" href="#">В избранное</a>
-              <p class="star star-four">
+              <p class="star-four">
                 <span class="visually-hidden">4 звезды</span>
               </p>
               <p class="card-rate">Рейтинг: 8.5</p>
@@ -190,9 +190,9 @@
                 <span class="description-title">Гостиница</span>
                 <span class="description-defenition">От 5000 ₽</span>
               </p>
-              <a class="button card-link" href="#">Подробнее</a>
-              <a class="button card-link marked-button" href="#">В избраном</a>
-              <p class="star star-four">
+              <a class="button card-link button-fiast" href="#">Подробнее</a>
+              <a class="button card-link button-second-active" href="#">В избраном</a>
+              <p class="star-four">
                 <span class="visually-hidden">4 звезды</span>
               </p>
               <p class="card-rate">Рейтинг: 9.2</p>
@@ -209,7 +209,7 @@
                 <span class="description-title">Гостиница</span>
                 <span class="description-defenition">От 2500 ₽</span>
               </p>
-              <a class="button card-link" href="#">Подробнее</a>
+              <a class="button card-link button-fiast" href="#">Подробнее</a>
               <a class="button card-link button-second" href="#">В избранное</a>
               <p class="star star-three">
                 <span class="visually-hidden">3 звезды</span>
@@ -228,7 +228,7 @@
                 <span class="description-title">Гостиница</span>
                 <span class="description-defenition">От 1500 ₽</span>
               </p>
-              <a class="button card-link" href="#">Подробнее</a>
+              <a class="button card-link button-fiast" href="#">Подробнее</a>
               <a class="button card-link button-second" href="#">В избранное</a>
               <p class="star star-two">
                 <span class="visually-hidden">2 звезды</span>
