Have done the buttons of catalog-sort

--- a/catalog.html
+++ b/catalog.html
@@ -140,18 +140,18 @@
               <option class="select-option">Сначала дешевые</option>
             </select>
             <ul class="sort-viewer-list">
-              <li class="viewer-item viewer-selected">
-                <a class="viewer-link" href="#">
+              <li class="viewer-item">
+                <a class="viewer-link viewer-icon viewer-link-active" href="#">
                   <span class="visually-hidden">Отображение карточками</span>
                 </a>
               </li>
               <li class="viewer-item">
-                <a class="viewer-link" href="#">
+                <a class="viewer-link viewer-compact" href="#">
                   <span class="visually-hidden">Отображение слайдами</span>
                 </a>
               </li>
               <li class="viewer-item">
-                <a class="viewer-link" href="#">
+                <a class="viewer-link viewer-list" href="#">
                   <span class="visually-hidden">Отображение списком</span>
                 </a>
               </li>
@@ -260,7 +260,8 @@
         </section>
         <section class="subscribe">
           <h2 class="subscribe-title section-title">Подпишитесь на рассылку</h2>
-          <p class="subscribe-text section-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <p class="subscribe-text section-description">Только полезная информация и никакого спама, честное
+            бойскаутское!</p>
           <form class="subscribe-form" action=" https://echo.htmlacademy.ru/" method="get">
             <label class="subscribe-field">
               <span class="visually-hidden">Адрес вашей электронной почты</span>
