--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
           <ul class="services-list">
             <li class="services-item">
               <h3 class="services-item-title section-subtitle">Жильё</h3>
-              <p class="services-item-text">Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
+              <p class="services-item-text">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
             </li>
             <li class="services-item">
               <h3 class="services-item-title section-subtitle">Еда</h3>
-              <p class="services-item-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              <p class="services-item-text">Всегда заказывайте <br>топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="services-item">
               <h3 class="services-item-title section-subtitle">Сувениры</h3>
@@ -113,9 +113,11 @@
           </a>
         </section>
         <section class="subscribe">
-          <h2 class="subscribe-title section-title">Подпишитесь на рассылку</h2>
-          <p class="subscribe-text section-description">Только полезная информация и никакого спама, честное
-            бойскаутское!</p>
+          <div class="subscribe-wrapper">
+            <h2 class="subscribe-title section-title">Подпишитесь на рассылку</h2>
+            <p class="subscribe-text section-description">Только полезная информация и никакого спама, честное
+              бойскаутское!</p>
+          </div>
           <form class="subscribe-form" action=" https://echo.htmlacademy.ru/" method="get">
             <label class="subscribe-field">
               <span class="visually-hidden">Адрес вашей электронной почты</span>
@@ -128,24 +130,26 @@
       <footer class="footer">
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="footer-social-link" href="#">
+            <a class="footer-social-link footer-social-vk" href="#">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link" href="#">
+            <a class="footer-social-link footer-social-telegram" href="#">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link" href="#">
+            <a class="footer-social-link footer-social-youtube" href="#">
               <span class="visually-hidden">Ютуб</span>
             </a>
           </li>
         </ul>
-        <a class="footer-phone navigation-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <div class="footer-phone">
+          <a class="phones-number navigation-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </div>
         <a class="footer-developer" href="#">
-          <img src="#" alt="Разработано HTML Academy">
+          <img src="./images/background/Academy.svg" width="115" height="33" alt="Разработано HTML Academy">
         </a>
       </footer>
     </div>
