Service and search blocks are done.

--- a/index.html
+++ b/index.html
@@ -83,20 +83,18 @@
           </ul>
         </section>
         <section class="services">
-          <div class="services-titles-wrapper">
-            <h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-            <p class="section-description">Опытный персонал и качественное обслуживание!</p>
-          </div>
+          <h2 class="services-title section-title">Приезжайте в Седону отдохнуть<br>в комфорте и уюте!</h2>
+          <p class="services-description section-description">Опытный персонал и качественное обслуживание!</p>
           <ul class="services-list">
-            <li class="services-item">
+            <li class="services-item services-item-dwelling">
               <h3 class="services-item-title section-subtitle">Жильё</h3>
               <p class="services-item-text">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
             </li>
-            <li class="services-item">
+            <li class="services-item services-item-food">
               <h3 class="services-item-title section-subtitle">Еда</h3>
               <p class="services-item-text">Всегда заказывайте <br>топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="services-item">
+            <li class="services-item services-item-gift">
               <h3 class="services-item-title section-subtitle">Сувениры</h3>
               <p class="services-item-text">Не только китайского,но и настоящего местного производства!</p>
             </li>
@@ -104,11 +102,11 @@
         </section>
         <section class="search">
           <h2 class="visually-hidden">Поиск гостиницы в городке</h2>
-          <p class="search-title section-title">Заинтересовались?</p>
-          <p class="search-text section-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+          <p class="search-title">Заинтересовались?</p>
+          <p class="search-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие
             предложения гостиниц в
             Седоне</p>
-          <a href="#" class="search-button button big-button">
+          <a href="#" class="search-button button big-button" type="button">
             Поиск гостинцы в Седоне
           </a>
         </section>
