--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
         </div>
         <section class="features">
           <h2 class="visually-hidden"> Индивидуальные особеннсти городка</h2>
-          <div class="features-titles-wrapper">
-            <p class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-            <p class="section-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-          </div>
+          <p class="features-title section-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
+          <p class="features-description section-description">Рассмотрим причины, по которым Седона круче, чем
+            Гранд-Каньон!</p>
           <ul class="features-list">
             <li class="features-item features-large">
               <div class="features-large-wrapper">
@@ -77,7 +76,7 @@
                 <h3 class="features-title section-subtitle">Там есть мост дьявола</h3>
                 <p class="features-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
-              <img class="features-img" src="./images/content/Devil's Bridge.jpg" width="800" height="385"
+              <img class="features-img" src="./images/content/Devil's-Bridge.jpg" width="800" height="385"
                 alt="Фото природной арки из красного песчаника, которая носит название «Мост дьявола».">
             </li>
           </ul>
@@ -106,16 +105,14 @@
           <p class="search-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие
             предложения гостиниц в
             Седоне</p>
-          <a href="#" class="search-button button big-button" type="button">
+          <button class="search-button button big-button" type="button">
             Поиск гостинцы в Седоне
-          </a>
+          </button>
         </section>
         <section class="subscribe">
-          <div class="subscribe-wrapper">
-            <h2 class="subscribe-title section-title">Подпишитесь на рассылку</h2>
-            <p class="subscribe-text section-description">Только полезная информация и никакого спама, честное
-              бойскаутское!</p>
-          </div>
+          <h2 class="subscribe-title section-title">Подпишитесь на рассылку</h2>
+          <p class="subscribe-description section-description">Только полезная информация и никакого спама,<br>честное
+            бойскаутское!</p>
           <form class="subscribe-form" action=" https://echo.htmlacademy.ru/" method="get">
             <label class="subscribe-field">
               <span class="visually-hidden">Адрес вашей электронной почты</span>
