--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="page-header-navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link" href="#">Главная</a>
+              <a class="navigation-link navigation-link-currently" href="#">Главная</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">О Седоне</a>
@@ -28,10 +28,10 @@
             </li>
           </ul>
           <div class="user-navigation">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link navigation-icon-search" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
-            <a class="navigation-link" href="#">
+            <a class="navigation-link navigation-icon-preferences" href="#">
               <span class="visually-hidden">Количество предпочтений</span>
               <span class="user-navigation-counter">12</span>
             </a>
