--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,7 @@
             <h1 class="main-inner-title">Гостиницы Седоны</h1>
             <ul class="breadcrumbs-list">
               <li class="breadcrumbs-item">
-                <a class="breadcrumbs-link " href="index.html">
+                <a class="breadcrumbs-link breadcrumbs-main" href="index.html">
                   <span class="visually-hidden">Главная страница</span>
                 </a>
               </li>
@@ -62,20 +62,23 @@
                 <ul class="filter-list">
                   <li class="filter-item">
                     <label class="control">
-                      <input class="control-input" type="checkbox" name="pool" checked>
-                      Бассейн
+                      <input class="control-input visually-hidden" type="checkbox" name="pool" checked>
+                      <span class="control-mark"></span>
+                      <span class="control-label">Бассейн</span>
                     </label>
                   </li>
                   <li class="filter-item">
                     <label class="control">
-                      <input class="control-input" type="checkbox" name="park" checked>
-                      Парковка
+                      <input class="control-input visually-hidden" type="checkbox" name="parking" checked>
+                      <span class="control-mark"></span>
+                      <span class="control-label">Парковка</span>
                     </label>
                   </li>
                   <li class="filter-item">
                     <label class="control">
-                      <input class="control-input" type="checkbox" name="WF">
-                      Wi-Fi
+                      <input class="control-input visually-hidden" type="checkbox" name="WF">
+                      <span class="control-mark"></span>
+                      <span class="control-label">Wi-Fi</span>
                     </label>
                   </li>
                 </ul>
@@ -85,42 +88,52 @@
                 <ul class="filter-list">
                   <li class="filter-item">
                     <label class="control">
-                      <input class="control-input" type="radio" name="accommodation-type" value="hotel" checked>
-                      Гостиница
+                      <input class="control-input visually-hidden" type="radio" name="accommodation-type" value="hotel"
+                        checked>
+                      <span class="control-mark"></span>
+                      <span class="control-label">Гостиница</span>
                     </label>
                   </li>
                   <li class="filter-item">
                     <label class="control">
-                      <input class="control-input" type="radio" name="accommodation-type" value="motel">
-                      Мотель
+                      <input class="control-input visually-hidden" type="radio" name="accommodation-type" value="motel">
+                      <span class="control-mark"></span>
+                      <span class="control-label">Мотель</span>
+
                     </label>
                   </li>
                   <li class="filter-item">
                     <label class="control">
-                      <input class="control-input" type="radio" name="accommodation-type" value="apartments">
-                      Апартаменты
+                      <input class="control-input visually-hidden" type="radio" name="accommodation-type"
+                        value="apartments">
+                      <span class="control-mark"></span>
+                      <span class="control-label">Апартаменты</span>
                     </label>
                   </li>
                 </ul>
               </fieldset>
               <fieldset class="filter-fields">
                 <legend class="filter-title">Стоимость, ₽:</legend>
-                <label class="range-field">
-                  <input class="range-input" type="number" name="price-from" value="0" min="0" max="8990" step="10">
-                  от
-                </label>
-                <label class="range-field">
-                  <input class="range-input" type="number" name="price-to" value="9000" min="10" max="9000" step="10">
-                  до
-                </label>
-                <div class="range-slider slider">
-                  <div class="slider-bar">
-                    <button class="slider-button" type="button">
-                      <span class="visually-hidden">Ручка минимальной цены</span>
-                    </button>
-                    <button class="slider-button" type="button">
-                      <span class="visually-hidden">Ручка максимальной цены</span>
-                    </button>
+                <div class="range-wrapper-inputs">
+                  <label class="range-input-label">
+                    <input class="range-input range-input-min" type="number" name="price-from" value="0" min="0" max="8990" step="10">
+                    <span class="range-input-text">от</span>
+                  </label>
+                  <label class="range-input-label">
+                    <input class="range-input range-input-max" type="number" name="price-to" value="9000" min="10" max="9000" step="10">
+                    <span class="range-input-text">до</span>
+                  </label>
+                </div>
+                <div class="range">
+                  <div class="range-slider slider">
+                    <div class="slider-bar" style="left: 0; width: 226px">
+                      <button class="slider-button slider-button-min" type="button">
+                        <span class="visually-hidden">Ручка минимальной цены</span>
+                      </button>
+                      <button class="slider-button slider-button-max" type="button">
+                        <span class="visually-hidden">Ручка максимальной цены</span>
+                      </button>
+                    </div>
                   </div>
                 </div>
               </fieldset>
